--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Meu Curriculum">
     <ion-content>
-        <div class="hero slide-up" style="background-image: url('img/blue.png');">
+        <div class="hero slide-up" style="background-image: url('data:image/jpeg;base64,{{user.background}}');">
             <div class="blabla">
                 <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{user.avatar}}');"></div>
 
