--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -2,10 +2,27 @@
   <ion-nav-bar class="bar bar-light">
     <ion-nav-back-button ></ion-nav-back-button>
     <ion-nav-buttons side="right">
-        <button class="button-icon icon ion-gear-b" ui-sref="app.editprofile">
+        <button class="button-icon icon ion-gear-b" ng-controller="LoginCtrl"ng-click="popover.show($event)">
         </button>
     </ion-nav-buttons>
   </ion-nav-bar>  <ion-side-menu-content>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 </ion-side-menus>
+<script id="templates/popover.html" type="text/ng-template">
+  <ion-popover-view style="height:180px;">
+    <ion-content>
+      <div class="list">
+        <a class="item" ui-sref="app.editprofile">
+          Configurar Perfil
+        </a>
+        <a class="item" ng-click="changeBackground()">
+          Alterar foto de capa
+        </a>
+        <a class="item" ng-click="logout()" >
+          Sair
+        </a>
+      </div>
+    </ion-content>
+  </ion-popover-view>
+</script>
