edit profile improove

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,7 +13,7 @@
   <ion-popover-view style="height:180px;">
     <ion-content>
       <div class="list">
-        <a class="item" ui-sref="app.editprofile">
+        <a class="item" ng-click="closePopover()"ui-sref="app.editprofile">
           Configurar Perfil
         </a>
         <a class="item" ng-click="changeBackground()">
