--- a/www/templates/segundaTelaEdit.html
+++ b/www/templates/segundaTelaEdit.html
@@ -34,7 +34,7 @@
     <div class="padding-tela1">
       <div class="list">
         <label class="item item-input item-floating-label">
-          <span class="input-label">Idade</span>
+          <span class="input-label">Idade máxima de busca</span>
           <input type="text" placeholder="Idade" ng-model="user.search_range">
         </label>
       </div>
