--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -27,6 +27,12 @@
             <input placeholder="Cidade" type="text" ng-model='user.city'>
           </label>
         </div>
+        <div class="distance">
+          <span class="labels"></br></span>
+          <ionic-datepicker ion-datetime-picker date="dateValue" min="minDate" max="maxDate" callback="datePickerCallback" date ng-model="user.birthday">
+            <button class="button button-block icon-right ion-calendar"> {{ user.birthday | date:'dd/MM/yy' }}</button>
+          </ionic-datepicker>
+        </div>
 
         <div class="row">
 
@@ -49,12 +55,6 @@
             <textarea placeholder="Descrição" ng-model='user.description'></textarea>
           </label>
         </div>
-      </div>
-      <div class="damn">
-        Configurar busca
-      </div>
-      <div class="margin-grey-light">
-        Procurando por
       </div>
       <div class="row">
         <div class="col col-50">
@@ -82,12 +82,17 @@
         {{user.search_range}}
         <span class="labels"></br></span>
       </div>
-      <div>
-      <p ng-repeat="img in images">
-        <img ng-src="{{img}}"/>
-      </p>
-      <button class=" btCamera font button button-block button-positive icon ion-ios-camera" ng-click="selImages()"> Câmera</button>
-    </div>
+        <div class="grid" width="100%">
+          <button class=" btCamera font button button-block icon ion-images" ng-click="selImages()"> Adicionar fotos</button>
+            <div class="row" ng-repeat="img in user.gallery" ng-if="$index % 2 === 0">
+                <div class="col col-50" ng-if="$index < user.gallery.length">
+                    <img ng-src="{{user.gallery[$index]}}" width="100%" on-hold="removeItem($index)"/>
+                </div>
+                <div class="col col-50" ng-if="$index + 1 < user.gallery.length">
+                  <img ng-src="{{user.gallery[$index + 1]}}" width="100%" on-hold="removeItem($index+1)"/>
+                </div>
+            </div>
+        </div>
     <span class="labels"></br></span>
         <button class="sparara" ng-click="updateProfile(user)">Salvar</button>
         <span class="labels"></br></span>
