--- a/www/templates/segundaTelaEdit.html
+++ b/www/templates/segundaTelaEdit.html
@@ -35,7 +35,7 @@
       <div class="list">
         <label class="item item-input item-floating-label">
           <span class="input-label">Idade máxima de busca</span>
-          <input type="text" placeholder="Idade" ng-model="user.search_range">
+          <input type="text" placeholder="Idade máxima de busca" ng-model="user.search_range">
         </label>
       </div>
     </div>
