--- a/www/templates/editProfile.html
+++ b/www/templates/editProfile.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     <span class="labels"></br></span>
-        <button class="sparara" ng-click="updateProfile(user)">Salvar</button>
+        <button class="sparara" ng-click="updateProfile(user)" ui-sref="app.profile">Salvar</button>
         <span class="labels"></br></span>
         <span class="labels"></br></span>
     </div>
