--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -1,17 +1,21 @@
 <ion-view view-title="Informe onde você está">
-  <ion-content ng-init="allLocations()"overflow-scroll="false">
+  <ion-content ng-init="allLocations()" style="margin-bottom:10%;">
 
     <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
       <input type="text" placeholder="Buscar" ng-model="search.name">
     </label>
 
-    <ion-list ng-repeat="location in locations | filter:search">
+    <ion-list ng-repeat="location in locations | filter:search | limitTo:pageSize">
       <a class="item item-thumbnail-left" ng-click="doCheckin(location)">
         <img ng-src="{{location.image}}"/>
         <h2>{{location.name}}</h2>
       </a>
     </ion-list>
+    <button class=" btnPlus font button button-block icon ion-ios-plus-empty"
+      ng-click="loadNextPage()">
+        Mostrar mais
+    </button>
   </ion-content>
   <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
 
