--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -23,15 +23,15 @@
       icon-off="ion-compass" ng-click="allLocations()">
     </ion-tab>
 
-    <ion-tab icon-on="ion-chatbubble-working" icon-off="ion-chatbubble-working"
+    <ion-tab icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline"
       ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches')">
     </ion-tab>
 
-    <ion-tab icon-on="ion-camera" icon-off="ion-camera"
+    <ion-tab icon-on="ion-ios-camera-outline" icon-off="ion-ios-camera-outline"
       ng-controller="LoginCtrl"ng-click="newPicture()">
     </ion-tab>
 
-    <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell"
+    <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell-outline"
       ui-sref="app.notifications" ng-controller="LoginCtrl" ng-click="reloadUser('app.notifications')">
     </ion-tab>
 
