--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -29,8 +29,8 @@
     <div class="list list-inset">
       <form ui-keypress="{13:'submitAddMessage($event)'}" data-ng-submit="submitAddMessage()" >
         <label class="item item-input">
-          <input type="text" placeholder="your message ..." data-ng-model="newMessage">
-          <button class="button button-positive">Send</button>
+          <input type="text" placeholder="Digite sua mensagem..." data-ng-model="newMessage">
+          <button class="button button-positive">Enviar</button>
         </label>
       </form>
     </div>
