--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -26,7 +26,7 @@
 
   </ion-content>
   <div class="bar bar-footer bar-stable" id="bar-footer-message-box">
-    <div class="list list-inset">
+    <div class="list" style="width:100%;">
       <form ui-keypress="{13:'submitAddMessage($event)'}" data-ng-submit="submitAddMessage()" >
         <label class="item item-input">
           <input type="text" placeholder="Digite sua mensagem..." data-ng-model="newMessage">
