--- a/www/css/style.css
+++ b/www/css/style.css
@@ -40,6 +40,17 @@
   height: 100%;
   background-size:contain;
 }
+
+.tabs .tab-item .icon.coelho {
+  background-repeat: no-repeat;
+  background-position: 50%;
+  border-radius: 50%;
+  width: 45px;
+  height: 100%;
+  background-size:contain;
+  background-image: url('/img/unnamed.png');
+}
+
 .cuzaum {
   position: relative;
   left: calc(50% - 50px);
