interaction from users page

--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -42,7 +42,7 @@
         ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches')">
       </ion-tab>
 
-      <ion-tab icon-off="icon coelho">
+      <ion-tab icon-off="icon coelho" ng-controller="UsersCtrl" ng-click="addInteraction(userp)">
       </ion-tab>
 
       <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell-outline"
