--- a/www/templates/primeiraTelaEdit.html
+++ b/www/templates/primeiraTelaEdit.html
@@ -11,7 +11,7 @@
       Configure seu perfil
     </div>
     <div class="profile-image padding">
-      <img ng-src="data:image/jpeg;base64,{{image}}" err-src="/img/ionic.png" />
+      <img ng-src="data:image/jpeg;base64,{{user.avatar}}" err-src="/img/ionic.png" />
     </div>
     <button class="profile-edit-button" ng-click="alterarFoto()">Alterar foto</button>
     <form name="testForm" class="padding-tela1" novalidate>
