Remove back button

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,6 +12,23 @@
   width: 100%;
 }
 
+/*.bar.bar-header {
+  background: rgba(255,255,255,.10);
+  border-bottom-width: 0;
+}
+
+.bar.bar-header h1 {
+  color: black !important;
+}
+
+.scroll-content {
+  overflow: visible !important;
+}
+
+.platform-ios.platform-cordova:not(.fullscreen) .has-header {
+  top:0px;
+}*/
+
 .errors {
   color: red;
 }
