--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Meu Curriculum">
+<ion-view view-title="Meu Curriculum" hide-back-button="true">
     <ion-content>
         <div class="hero slide-up" style="background-image: url('data:image/jpeg;base64,{{user.background}}');">
             <div class="blabla">
