--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-content>
+  <ion-content class="chat-message">
     <refresher></refresher>
 
     <div ng-repeat="message in messages | orderBy:'created_at'">
@@ -35,27 +35,4 @@
       </form>
     </div>
   </div>
-  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
-
-    <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
-      icon-off="ion-compass" ng-click="allLocations()">
-    </ion-tab>
-
-    <ion-tab icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline"
-      ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches')">
-    </ion-tab>
-
-    <ion-tab icon-on="ion-ios-camera-outline" icon-off="ion-ios-camera-outline"
-      ng-controller="LoginCtrl"ng-click="newPicture()">
-    </ion-tab>
-
-    <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell-outline"
-      ui-sref="app.notifications" ng-controller="LoginCtrl" ng-click="reloadUser('app.notifications')">
-    </ion-tab>
-
-    <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
-      ui-sref="app.profile">
-    </ion-tab>
-
-  </ion-tabs>
 </ion-view>
