--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -5,30 +5,8 @@
         <button class="button-icon icon ion-gear-b" ng-controller="LoginCtrl"ng-click="popover.show($event)">
         </button>
     </ion-nav-buttons>
-  </ion-nav-bar>  <ion-side-menu-content>
+  </ion-nav-bar>
+  <ion-side-menu-content>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 </ion-side-menus>
-<script id="templates/popover.html" type="text/ng-template">
-  <ion-popover-view>
-    <ion-content>
-      <div class="list">
-        <a class="item" ng-click="closePopover()"ui-sref="app.editprofile">
-          Configurar Perfil
-        </a>
-        <a class="item" ng-click="changeBackground()">
-          Alterar foto de capa
-        </a>
-        <a class="item" ng-click="reloadUser('app.followers');closePopover()">
-          Seguidores
-        </a>
-        <a class="item" ng-click="reloadUser('app.following');closePopover()">
-          Seguindo
-        </a>
-        <a class="item" ng-click="logout()" >
-          Sair
-        </a>
-      </div>
-    </ion-content>
-  </ion-popover-view>
-</script>
