--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -1,4 +1,7 @@
 <ion-view view-title="{{loc.name}}">
+  <ion-nav-bar class="bar bar-light">
+    <ion-nav-back-button ></ion-nav-back-button>
+  </ion-nav-bar>
   <ion-content>
     <!-- <img ng-src="{{loc.image}}"/> -->
     <div class="grid">
@@ -47,4 +50,27 @@
        </ion-list>
      </div> -->
   </ion-content>
+  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+
+    <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
+      icon-off="ion-compass" ng-click="allLocations()">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline"
+      ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches')">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-camera-outline" icon-off="ion-ios-camera-outline"
+      ng-controller="LoginCtrl"ng-click="newPicture()">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell-outline"
+      ui-sref="app.notifications" ng-controller="LoginCtrl" ng-click="reloadUser('app.notifications')">
+    </ion-tab>
+
+    <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
+      ui-sref="app.profile">
+    </ion-tab>
+
+  </ion-tabs>
 </ion-view>
