--- a/www/templates/message.html
+++ b/www/templates/message.html
@@ -1,4 +1,11 @@
 <ion-view>
+  <ion-nav-bar class="bar bar-light">
+    <ion-nav-back-button ></ion-nav-back-button>
+    <ion-nav-buttons side="right">
+        <button class="button-icon icon ion-gear-b" ng-controller="LoginCtrl"ng-click="popover.show($event)">
+        </button>
+    </ion-nav-buttons>
+  </ion-nav-bar>
   <ion-content class="chat-message">
     <refresher></refresher>
 
