--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -1,16 +1,26 @@
-<ion-view view-title="{{userp.name}}">
+<ion-view>
+  <ion-nav-bar class="bar bar-light">
+    <ion-nav-back-button ></ion-nav-back-button>
+    <ion-nav-buttons side="right">
+        <button class="button-icon icon ion-gear-b" ng-controller="LoginCtrl"ng-click="popover.show($event)">
+        </button>
+    </ion-nav-buttons>
+  </ion-nav-bar>
     <ion-content>
+      <ion-nav-bar class="bar bar-header nao bar-light">
+        </ion-nav-bar>
         <div class="hero slide-up" style="background-image: url('data:image/jpeg;base64,{{userp.background}}');">
             <div class="blabla">
-                <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{userp.avatar}}');" ng-if="userp.avatar !== null"></div>
-                <div class="avatar" err="img/ionic.png" ng-if="userp.avatar === null"></div>
-                <h3><a class="light">{{userp.name}}</a></h3>
-                <h4><div class="meucu">{{userp.age}} anos</div></h4>
-                <button class="cuzaum button button-assertive" ng-click="follow(userp)">Seguir</button>
+                <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{userp.avatar}}');"></div>
+
             </div>
+            <div class="light1">{{userp.name}}</div>
+            <h4><div class="meucu">{{userp.age}} anos</div></h4>
+            <div class="description">{{userp.description}}</div>
+            <div class="district">{{userp.district}}, {{userp.city}}</div>
             <div class="tabs tabs-light tabs-icon-only static ">
                 <a class="tab-item">
-                    <i ng-controller="locationsCtrl" ng-if="userp.last_place" class="icon mcfly" style="background-image: url('{{user.last_place.image}}');" ng-click="viewLocation(userp.last_place)"></i>
+                    <i ng-controller="locationsCtrl" ng-if="userp.last_place" class="icon mcfly" style="background-image: url('{{userp.last_place.image}}');" ng-click="viewLocation(userp.last_place)"></i>
                     <i ng-controller="locationsCtrl" ng-if="!userp.last_place" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
@@ -22,16 +32,16 @@
                 <a class="tab-item">
                   <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
-                <a class="tab-item" ng-controller="LoginCtrl"ng-click="popover.show($event)">
-                  <i class="icon ion-android-more-vertical"></i>
+                <a class="tab-item" ng-controller="UsersCtrl"ng-click="popover.show($event)">
+                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
             </div>
         </div>
         <span class="labels"></br></span>
-        <div ng-if="user.gallery !== null">
-          <ion-gallery ion-gallery-items="usergallery" ion-gallery-toggle="false"></ion-gallery>
+        <div ng-if="userp.gallery !== null">
+          <ion-gallery ion-gallery-items="userpgallery" ion-gallery-toggle="false"></ion-gallery>
         </div>
-        <div ng-if="user.gallery === null">
+        <div ng-if="userp.gallery === null">
           <img src="../img/local_map.png"/>
         </div>
     </ion-content>
