--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -33,7 +33,7 @@
                   <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item" ng-controller="UsersCtrl"ng-click="popover.show($event)">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon ion-android-more-vertical"></i>
                 </a>
             </div>
         </div>
