--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -22,16 +22,16 @@
                     <i ng-controller="locationsCtrl" ng-if="!user.last_place" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
             </div>
         </div>
