--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -24,13 +24,13 @@
                     <i ng-controller="locationsCtrl" ng-if="!userp.last_place" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
                 </a>
                 <a class="tab-item" ng-controller="UsersCtrl"ng-click="popover.show($event)">
                   <i class="icon ion-android-more-vertical"></i>
