--- a/www/css/style.css
+++ b/www/css/style.css
@@ -447,7 +447,6 @@ a,
   background-position: center;
   background-size: cover;
   border: solid 1px rgba(255, 255, 255, 0.8);
-  border-radius: 50%;
   display: inline-block;
   height: 88px;
   left: auto;
@@ -691,6 +690,11 @@ a,
   height: 120px;
   left: 16px;
   position: absolute;
+  box-shadow: 0px 0px 5px 5px rgba(255,255,255,1);
+  -moz-box-shadow: 0px 0px 5px 5px rgba(255,255,255,1);
+  -webkit-box-shadow: 0px 0px 5px 5px rgba(255,255,255,1);
+  -o-box-shadow: 0px 0px 5px 5px rgba(255,255,255,1);
+  border-radius: 50%;
   width: 120px; }
 
 /* List: Gallery
