--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -18,20 +18,24 @@
             <div class="district">{{user.district}}, {{user.city}}</div>
             <div class="tabs tabs-light tabs-icon-only static ">
                 <a class="tab-item">
-                    <i ng-controller="locationsCtrl" ng-if="user.last_place" class="icon mcfly" style="background-image: url('{{user.last_place.image}}');" ng-click="viewLocation(user.last_place)"></i>
-                    <i ng-controller="locationsCtrl" ng-if="!user.last_place" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+                    <i ng-if="user.locations[0]" class="icon mcfly" style="background-image: url('{{user.locations[0].image}}');"></i>
+                    <i ng-if="!user.locations[0]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
+                    <i ng-if="user.locations[1]" class="icon mcfly" style="background-image: url('{{user.locations[1].image}}');"></i>
+                    <i ng-if="!user.locations[1]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
+                    <i ng-if="user.locations[2]" class="icon mcfly" style="background-image: url('{{user.locations[2].image}}');"></i>
+                    <i ng-if="!user.locations[2]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
+                    <i ng-if="user.locations[3]" class="icon mcfly" style="background-image: url('{{user.locations[3].image}}');"></i>
+                    <i ng-if="!user.locations[3]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
                 <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
+                    <i ng-if="user.locations[4]" class="icon mcfly" style="background-image: url('{{user.locations[4].image}}');"></i>
+                    <i ng-if="!user.locations[4]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
                 </a>
             </div>
         </div>
