--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -19,22 +19,26 @@
             <div class="description">{{userp.description}}</div>
             <div class="district">{{userp.district}}, {{userp.city}}</div>
             <div class="tabs tabs-light tabs-icon-only static ">
-                <a class="tab-item">
-                    <i ng-controller="locationsCtrl" ng-if="userp.last_place" class="icon mcfly" style="background-image: url('{{userp.last_place.image}}');" ng-click="viewLocation(userp.last_place)"></i>
-                    <i ng-controller="locationsCtrl" ng-if="!userp.last_place" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
-                </a>
-                <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
-                </a>
-                <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
-                </a>
-                <a class="tab-item">
-                  <i class="icon mcfly" ng-controller="UsersCtrl" style="background-image: url('{{imglocation.img}}');"></i>
-                </a>
-                <a class="tab-item" ng-controller="UsersCtrl"ng-click="popover.show($event)">
-                  <i class="icon ion-android-more-vertical"></i>
-                </a>
+              <a class="tab-item">
+                  <i ng-if="userp.locations[0]" class="icon mcfly" style="background-image: url('{{userp.locations[0].image}}');"></i>
+                  <i ng-if="!userp.locations[0]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+              </a>
+              <a class="tab-item">
+                  <i ng-if="userp.locations[1]" class="icon mcfly" style="background-image: url('{{userp.locations[1].image}}');"></i>
+                  <i ng-if="!userp.locations[1]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+              </a>
+              <a class="tab-item">
+                  <i ng-if="userp.locations[2]" class="icon mcfly" style="background-image: url('{{userp.locations[2].image}}');"></i>
+                  <i ng-if="!userp.locations[2]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+              </a>
+              <a class="tab-item">
+                  <i ng-if="userp.locations[3]" class="icon mcfly" style="background-image: url('{{userp.locations[3].image}}');"></i>
+                  <i ng-if="!userp.locations[3]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+              </a>
+              <a class="tab-item">
+                  <i ng-if="userp.locations[4]" class="icon mcfly" style="background-image: url('{{userp.locations[4].image}}');"></i>
+                  <i ng-if="!userp.locations[4]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
+              </a>
             </div>
         </div>
         <span class="labels"></br></span>
