--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -12,10 +12,12 @@
                 <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{user.avatar}}');"></div>
 
             </div>
-            <div class="light1">{{user.name}}</div>
-            <h4><div class="meucu">{{user.age}} anos</div></h4>
-            <div class="description">{{user.description}}</div>
-            <div class="district">{{user.district}}, {{user.city}}</div>
+            <div class="ovocru">
+              <div class="light1">{{user.name}}</div>
+              <h4><div class="meucu">{{user.age}} anos</div></h4>
+              <div class="description">{{user.description}}</div>
+              <div class="district">{{user.district}}, {{user.city}}</div>
+            </div>
             <div class="tabs tabs-light tabs-icon-only static ">
                 <a class="tab-item">
                     <i ng-if="user.locations[0]" class="icon mcfly" style="background-image: url('{{user.locations[0].image}}');"></i>
