follow and unfollow beign updated

--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -18,9 +18,12 @@
         <h2>{{location.name}}</h2>
       </a>
     </ion-list>
-    <button class=" btnPlus font button button-block icon ion-ios-plus-empty"
+    <button ng-if="locations.length > 5"class=" btnPlus font button button-block icon ion-ios-plus-empty"
       ng-click="loadNextPage()">
         Mostrar mais
+    </button>
+    <button ng-if="locations.length == 0" ng-controller="locationsCtrl" ng-click="allLocations()"class=" btnPlus font button button-block">
+        Não há locais disponíveis onde você está
     </button>
   </ion-content>
   <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
