--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{loc.name}}">
+<ion-view view-title="Lovers em {{loc.name}}">
   <ion-nav-bar class="bar bar-light">
     <ion-nav-back-button ></ion-nav-back-button>
   </ion-nav-bar>
