--- a/www/templates/locations.html
+++ b/www/templates/locations.html
@@ -26,7 +26,7 @@
         Não há locais disponíveis onde você está
     </button>
   </ion-content>
-  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+  <ion-tabs  class="tabs-light tabs-icon-only">
 
     <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
       icon-off="ion-compass" ng-click="allLocations()">
