--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -48,7 +48,32 @@
           <img src="../img/local_map.png"/>
         </div>
     </ion-content>
-    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+    <ion-tabs ng-if="isMatched" class="tabs-light tabs-icon-only">
+
+      <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
+        icon-off="ion-compass" ng-click="allLocations()">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-ios-chatbubble" icon-off="ion-ios-chatbubble-outline"
+        ui-sref="app.matches" ng-controller="LoginCtrl" ng-click="reloadUser('app.matches')">
+      </ion-tab>
+
+      <ion-tab icon-off="icon coelho2">
+      </ion-tab>
+      <ion-tab ng-if="!isMatched" icon-off="icon coelho" ng-controller="UsersCtrl" ng-click="addInteraction(userp)">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-ios-bell" icon-off="ion-ios-bell-outline"
+        ui-sref="app.notifications" ng-controller="LoginCtrl" ng-click="reloadUser('app.notifications')">
+      </ion-tab>
+
+      <ion-tab icon-on="ion-ios-person" icon-off="ion-ios-person-outline"
+        ui-sref="app.profile">
+      </ion-tab>
+
+    </ion-tabs>
+
+    <ion-tabs ng-if="!isMatched" class="tabs-light tabs-icon-only">
 
       <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
         icon-off="ion-compass" ng-click="allLocations()">
