--- a/www/templates/following.html
+++ b/www/templates/following.html
@@ -18,7 +18,7 @@
       </ion-list>
     </div>
   </ion-content>
-  <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+  <ion-tabs  class="tabs-light tabs-icon-only">
 
     <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
       icon-off="ion-compass" ng-click="allLocations()">
