--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -54,7 +54,7 @@
           <h2>{{user.last_place.name}}</h2>
         </a> -->
     </ion-content>
-    <ion-tabs ng-if="isLogged" class="tabs-light tabs-icon-only">
+    <ion-tabs  class="tabs-light tabs-icon-only">
 
       <ion-tab ng-controller="locationsCtrl" icon-on="ion-compass"
         icon-off="ion-compass" ng-click="allLocations()">
