all headers repair

--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -2,13 +2,12 @@
   <ion-nav-bar class="bar bar-light">
     <ion-nav-back-button ></ion-nav-back-button>
     <ion-nav-buttons side="right">
-        <button class="button-icon icon ion-gear-b" ng-controller="LoginCtrl"ng-click="popover.show($event)">
-        </button>
+      <a class="tab-item more-button" ng-controller="UsersCtrl"ng-click="popover.show($event)">
+          <i class="icon ion-android-more-vertical"></i>
+      </a>
     </ion-nav-buttons>
   </ion-nav-bar>
     <ion-content>
-      <ion-nav-bar class="bar bar-header nao bar-light">
-        </ion-nav-bar>
         <div class="hero slide-up" style="background-image: url('data:image/jpeg;base64,{{userp.background}}');">
             <div class="blabla">
                 <div class="avatar" style="background-image: url('data:image/jpeg;base64,{{userp.avatar}}');"></div>
@@ -35,9 +34,11 @@
                   <i ng-if="userp.locations[3]" class="icon mcfly" style="background-image: url('{{userp.locations[3].image}}');"></i>
                   <i ng-if="!userp.locations[3]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
               </a>
-              <a class="tab-item" ng-controller="UsersCtrl"ng-click="popover.show($event)">
-                  <i class="icon ion-android-more-vertical"></i>
+              <a class="tab-item">
+                  <i ng-if="userp.locations[4]" class="icon mcfly" style="background-image: url('{{userp.locations[4].image}}');"></i>
+                  <i ng-if="!userp.locations[4]" class="icon mcfly" style="background-image: url('../img/local_map.png');"></i>
               </a>
+
             </div>
         </div>
         <span class="labels"></br></span>
