user terms modal

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -33,6 +33,7 @@
         <div class="margin-cadestro"><a ui-sref="app.register">Cadastre-se</a></div>
       </div>
     </div> -->
+    <a ng-click="modal.show()" class="positive">Termos de uso e política de privacidade</a>
 
 
   </ion-content>
