--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -26,14 +26,11 @@
     <button class="button-block button-positive" style="font-size:18px;" ng-click="alterarFoto()">
     foto
     </button> -->
-    <!-- <div class="foot-social hide-on-keyboard-open">
-      <div class="padding-button">
-        <button class="button button-block button-assertive" ng-click="loginGoogle()"><div class="margin-carai"><i class="icon ion-social-google"></i></div>Google</button>
-        <button class="button button-block button-positive" ng-click="loginFacebook()"><div class="margin-carai"><i class="icon ion-social-facebook"></i></div>Facebook</button>
-        <div class="margin-cadestro"><a ui-sref="app.register">Cadastre-se</a></div>
+    <div class="foot-social hide-on-keyboard-open">
+      <div class="padding">
+        <a ng-click="modal.show()" class="positive">Termos de uso e política de privacidade</a>
       </div>
-    </div> -->
-    <a ng-click="modal.show()" class="positive">Termos de uso e política de privacidade</a>
+    </div>
 
 
   </ion-content>
