--- a/www/templates/popover.html
+++ b/www/templates/popover.html
@@ -13,6 +13,9 @@
       <a class="item" ng-click="reloadUser('app.following');closePopover()">
         Seguindo
       </a>
+      <a class="item" ng-click="reloadUser('app.users');closePopover()">
+        Usuários bloqueados
+      </a>
       <a class="item" ng-click="logout()" >
         Sair
       </a>
